language/move-lang/tests/move_check/parser/byte_string_token_eof3.exp
error[E01007]: invalid byte string
  ┌─ tests/move_check/parser/byte_string_token_eof3.move:3:11
  │
3 │         b"\x0";
  │           ^^^ Invalid escape: '\x0'. Hex literals are represented by two symbols: [\x00-\xFF].

error[E01007]: invalid byte string
  ┌─ tests/move_check/parser/byte_string_token_eof3.move:4:11
  │
4 │         b"\x"
  │           ^^ Invalid escape: '\x'. Hex literals are represented by two symbols: [\x00-\xFF].

